# civiphrases

./: README.md  pyproject.toml
civiphrases/: __init__.py  __main__.py  civitai.py  classify.py  config.py  normalize.py  writeout.py
civiphrases-docker-webui/: .gitignore  Dockerfile  README.md  app.py  build-and-run.sh  build-local.sh  civiphrases_patch.py  demo_images.py  deploy_to_docker.sh  docker-compose.yml  image_capture.py  manage_remote.sh  requirements.txt  test_fetch_images.py  test_images.py  test_tgw_direct.py  version.json
civiphrases-docker-webui/templates/: index.html
docs/: TGW-OpenAI-API-cheatsheet.md  project_plan.md
tests/: __init__.py  test_classify.py  test_normalize.py
