[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civiphrases"
version = "0.1.0"
description = "CLI tool to fetch Civitai prompts and generate ComfyUI wildcard files using local LLM classification"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Prompt Generator", email = "user@example.com"}
]
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
    "pydantic>=1.8.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]

[project.scripts]
civiphrases = "civiphrases.__main__:main"

[tool.setuptools.packages.find]
include = ["civiphrases*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
